[gd_scene load_steps=6 format=3 uid="uid://ccf636mp186jm"]

[ext_resource type="Script" uid="uid://buxuyyfe6c2no" path="res://Scenes/Entities/static_entity.gd" id="1_bhqus"]
[ext_resource type="Script" uid="uid://bwhdiepo5jj0u" path="res://Scenes/Entities/simple_physics_area.gd" id="2_jh37d"]
[ext_resource type="Script" uid="uid://b74k3hljc2ftk" path="res://Scenes/Entities/moving_nodes.gd" id="3_rcuow"]
[ext_resource type="Script" uid="uid://bhtil1f36p6u6" path="res://Scenes/Entities/Enemy Roster/spinning_sprite.gd" id="6_8yo1o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_eju28"]
radius = 24.0

[node name="StaticEntity" type="Node2D"]
script = ExtResource("1_bhqus")

[node name="Mover" type="Area2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_jh37d")
weight_factor = 40.0
navigation = 1
base_max_speed = 0.0
base_acceleration = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mover"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_eju28")

[node name="KnockbackTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="MovingNodes" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_rcuow")

[node name="MoverSprite" type="Sprite2D" parent="MovingNodes"]
unique_name_in_owner = true
region_enabled = true
script = ExtResource("6_8yo1o")

[connection signal="area_entered" from="Mover" to="MovingNodes/MoverSprite" method="_on_change_rotation"]
