[gd_scene load_steps=27 format=3 uid="uid://3npqjbw1eov2"]

[ext_resource type="Script" uid="uid://d4ia61qi0cbin" path="res://Scenes/Entitiesobject.gd" id="1_huwmj"]
[ext_resource type="Script" uid="uid://bwhdiepo5jj0u" path="res://Scenes/Entities/simple_physics_area.gd" id="2_gvr11"]
[ext_resource type="Script" uid="uid://18qbvfo0etqi" path="res://Scenes/Entities/move_toward_behavior.gd" id="3_ppm4v"]
[ext_resource type="Script" uid="uid://b74k3hljc2ftk" path="res://Scenes/Entities/moving_nodes.gd" id="4_r5tbd"]
[ext_resource type="Texture2D" uid="uid://btfv8gghw24nk" path="res://Assets/Graphics/Textures/Dreadspawn - tentacles only - sprite sheet.png" id="5_nfyyn"]
[ext_resource type="Texture2D" uid="uid://hyutdgordr0p" path="res://Assets/Graphics/Textures/Dreadspawn - head only - sprite sheet.png" id="6_f5r7y"]
[ext_resource type="Script" uid="uid://fvo1v0emwh5c" path="res://Scenes/Entities/Enemy Roster/enemy_sprite.gd" id="6_hys2p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_eju28"]
radius = 24.0

[sub_resource type="AtlasTexture" id="AtlasTexture_hys2p"]
atlas = ExtResource("5_nfyyn")
region = Rect2(0, 0, 131, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_fg6bu"]
atlas = ExtResource("5_nfyyn")
region = Rect2(131, 0, 131, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8lq2"]
atlas = ExtResource("5_nfyyn")
region = Rect2(262, 0, 131, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_s13qt"]
atlas = ExtResource("5_nfyyn")
region = Rect2(393, 0, 131, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvl6f"]
atlas = ExtResource("5_nfyyn")
region = Rect2(524, 0, 131, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vtpi"]
atlas = ExtResource("5_nfyyn")
region = Rect2(655, 0, 131, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_oypo3"]
atlas = ExtResource("5_nfyyn")
region = Rect2(786, 0, 131, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_is6d1"]
atlas = ExtResource("5_nfyyn")
region = Rect2(917, 0, 131, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_jvl0e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hys2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fg6bu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8lq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s13qt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvl6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vtpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oypo3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_is6d1")
}],
"loop": true,
"name": &"tentacles",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_rciy3"]
atlas = ExtResource("6_f5r7y")
region = Rect2(0, 0, 131, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_abpw4"]
atlas = ExtResource("6_f5r7y")
region = Rect2(131, 0, 131, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_v765e"]
atlas = ExtResource("6_f5r7y")
region = Rect2(262, 0, 131, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_6evx7"]
atlas = ExtResource("6_f5r7y")
region = Rect2(393, 0, 131, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4gi6"]
atlas = ExtResource("6_f5r7y")
region = Rect2(524, 0, 131, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vkd8"]
atlas = ExtResource("6_f5r7y")
region = Rect2(655, 0, 131, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_06l41"]
atlas = ExtResource("6_f5r7y")
region = Rect2(786, 0, 131, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_adiw4"]
atlas = ExtResource("6_f5r7y")
region = Rect2(917, 0, 131, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_w5wrf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rciy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abpw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v765e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6evx7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4gi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vkd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06l41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adiw4")
}],
"loop": true,
"name": &"head",
"speed": 5.0
}]

[node name="Entity" type="Node2D"]
script = ExtResource("1_huwmj")

[node name="Mover" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(-33, 7)
script = ExtResource("2_gvr11")
weight_factor = 31.4
navigation = 2
base_max_speed = 120.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mover"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_eju28")

[node name="KnockbackTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="MoveTowardBehavior" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_ppm4v")

[node name="MovingNodes" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("4_r5tbd")

[node name="MoverSprite" type="AnimatedSprite2D" parent="MovingNodes"]
unique_name_in_owner = true
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_jvl0e")
animation = &"tentacles"
frame_progress = 0.843731
script = ExtResource("6_hys2p")

[node name="HeadSprite" type="AnimatedSprite2D" parent="MovingNodes/MoverSprite"]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_w5wrf")
animation = &"head"
frame_progress = 0.26253

[connection signal="position_updated" from="MoveTowardBehavior" to="Mover" method="_on_receive_new_desired_vector2"]
